--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ footer{
 footer h2{
     color:#FF5959;
     font-weight: 400;
+    font-family: 'Lobster', cursive;
 }
 footer p{
 color:#D9DBE1;
